+Fix text alignment to justify

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1399,6 +1399,7 @@ ul.navbar-nav > li:hover > a{
 .ts-intro-center .intro-desc{
     max-width: 850px;
     margin: 0 auto;
+    text-align: justify;
 }
 
 .intro-content{
@@ -1854,15 +1855,18 @@ ul.navbar-nav > li:hover > a{
 }
 .ts-speaker-session.right{
     padding-left: 20px;
+    text-align: justify;
 }
 
 .ts-speaker-session.left{
     padding-right: 20px;
+    text-align: justify;
 }
 
 .ts-speaker-session .session-title {
     font-size: 24px;
     margin-top: 0;
+    text-align: justify;
 }
 
 /* statics
